--- a/E-portfolio.html
+++ b/E-portfolio.html
@@ -4,6 +4,7 @@
         <title>
             E-portfolio | Andrei Ellana
         </title>
+        <link rel="icon" href="/images/logo no bg.png" type="image/png">
         <link rel="stylesheet" href="portfolio.css">
         <style>
 
